--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,7 @@
 name=Ubidots CC3200-LAUNCHXL
-version=2.0.0
-author=Ubidots <devel@ubidots.com>, Maria Hernandez <maria@ubidots.com>, Jose Garcia <jose.reyes@ubidots.com>
-maintainer=María Carlina Hernandez <maria@ubidots.com>, Jose Garcia <jose.reyes@ubidots.com>
+version=3.0.0
+author=Ubidots <devel@ubidots.com>, Jose Garcia <jose.reyes@ubidots.com>, Cristian Arrieta <cristian@ubidots.com>
+maintainer=Cristian Arrieta <cristian@ubidots.com>, Jose Garcia <jose.reyes@ubidots.com>
 sentence=Ubidots library for the CC3200-LAUNCHXL
 paragraph=Ubidots library for the CC3200-LAUNCHXL
 category=Other
